--- a/_extensions/spectrum-spark/training/style.css
+++ b/_extensions/spectrum-spark/training/style.css
@@ -1,6 +1,3 @@
-a {
-    color: blue
-}
 
 .footer {
     position: fixed;
@@ -32,4 +29,31 @@ a {
 
 body {
     margin: 0;
+}
+
+.presenter {
+    font-size: 1.2em;
+}
+
+.presenter .emph {
+    font-weight: bold;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+textarea {
+    width: 100%;
+}
+
+.line-block {
+    line-height: 1.5em;
+}
+
+.line-block a {
+    font-style: italic;
 }
