--- a/student_materials/site_libs/quarto-contrib/quarto-project/spectrum-spark/training/style.css
+++ b/student_materials/site_libs/quarto-contrib/quarto-project/spectrum-spark/training/style.css
@@ -5,6 +5,9 @@
     left: 0;
     right: 0;
     z-index: 100;
+    max-height: 200px;
+    padding-top: 4rem;
+    display: none
 }
 
 @media (min-width: 992px) {
@@ -24,6 +27,12 @@
         box-shadow:
         35px 0 #4BA5AB,
         70px 0 #74C2CE;
+    }
+}
+
+@media (min-width: 1080px) {
+    .footer {
+        display: inherit;
     }
 }
 
