Update formatting to scss standards

--- a/_extensions/spectrum-spark/training/sparkle.scss
+++ b/_extensions/spectrum-spark/training/sparkle.scss
@@ -1,3 +1,10 @@
+/*-- scss:defaults --*/
+
+/* TODO: Customize html appearance by setting SCSS variables */
+/* See https://quarto.org/docs/output-formats/html-themes.html#theme-options */
+
+/*-- scss:rules --*/
+
 
 .footer {
     bottom: 0;
